--- a/style.less
+++ b/style.less
@@ -124,8 +124,26 @@ section{
 	    background-image: none;
 	    background-color: #555;
 	}
+	/*	select 	*/
+	select.stylized {
+	  -webkit-appearance: button;
+	  -webkit-border-radius: 2px;
+	  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
+	  -webkit-padding-end: 20px;
+	  -webkit-padding-start: 2px;
+	  -webkit-user-select: none;
 
-	div{
+	  background-image: url('./select-arrow1.png') ;
+	  background-position: center right;
+	  background-repeat: no-repeat;
+	  border: 1px solid #AAA;
+	  margin: 0;
+	  padding-top: 2px;
+	  padding-bottom: 2px;
+	  width: 200px;
+	  height: 40px;
+	}
+	#div-button{
 		appearance:button;
 		-moz-appearance:button; /* Firefox */
 		-webkit-appearance:button; /* Safari and Chrome */
